@@ -10,14 +10,14 @@
 
 		* parse "Tip funded." https://www.reddit.com/message/messages/11nvtdw
 		* solve autopay triggering (a thread? some grace status and activation by reddit thread?)
-		* look at tip_or_message_by_message
-		* use same association scheme for confirmation comments as for claim/return
+		* deferred tipping comment loading?
+		* open browser to claim/return message
+		* open browser to confirmation comment
 
 	* beta n+2
 
 		* copy recipient (tipee) address
 		* set amount...
-		* mark confirmation comments read on mark_unread of the associated tip)
 		* move reddit forget button to settings
 
 		* segfault on close (at least on blackbox)
