@@ -232,25 +232,27 @@ class Reddit(PrintError, QObject):
 
 		if len(tips) > 0:
 			self.print_error("marking {len(tips)} new paid tips as read")
-			self.mark_read_tips(tips, include_claim_returned_messages=True)
+			self.mark_read_tips(tips, include_associated_items=True)
 
-	def mark_read_tips(self, tips, include_claim_returned_messages=True):
+	def mark_read_tips(self, tips, include_associated_items=True):
 		"""call mark_read() on messages associated with the given 'tips' 
 		and remove the tips from tiplist"""
 		tips_with_messages = [tip for tip in tips if tip.chaintip_message and isinstance(tip, RedditTip)]
-		messages = [tip.chaintip_message for tip in tips_with_messages]
-		if include_claim_returned_messages:
-			messages += [tip.claim_or_returned_message for tip in tips_with_messages if hasattr(tip, "claim_or_returned_message")]
-		self.print_error(f"will mark_read() {len(messages)} messages (associated from {len(tips_with_messages)} tips).")
-		self.mark_read_messages(messages)
+		items = [tip.chaintip_message for tip in tips_with_messages]
+		if include_associated_items:
+			items += [tip.claim_or_returned_message for tip in tips_with_messages if hasattr(tip, "claim_or_returned_message")]
+			items += [tip.chaintip_confirmation_comment for tip in tips_with_messages if hasattr(tip, "chaintip_confirmation_comment")]
+		self.print_error(f"will mark_read() {len(items)} items (associated from {len(tips_with_messages)} tips).")
+		self.mark_read_items(items)
 
-	def mark_read_messages(self, messages):
-		self.reddit.inbox.mark_read(messages)
-		for message in messages:
-			tip = self.tip_or_message_by_message[message.id]
-			if isinstance(tip, RedditTip):
-				tip.read_status = 'read'
-				self.wallet_ui.tiplist.updateTip(tip)
+	def mark_read_items(self, items: list):
+		self.reddit.inbox.mark_read(items)
+		for item in items:
+			if isinstance(item, praw.models.Message):
+				tip = self.tip_or_message_by_message[item.id]
+				if isinstance(tip, RedditTip):
+					tip.read_status = 'read'
+					self.wallet_ui.tiplist.updateTip(tip)
 
 	def disconnect(self):
 		write_config(self.wallet_ui.wallet, WalletStorageTokenManager.ACCESS_TOKEN_KEY, None)
@@ -760,6 +762,10 @@ class RedditTip(Tip):
 		if not read_config(wallet, "autopay", c["default_autopay"]): 
 			self.payment_status = 'autopay disabled'
 			return False		
+
+		# alread received something? (status should be 'paid' anyway, but to be sure...)
+		if self.amount_received_bch and self.amount_received_bch > Decimal(0):
+			return False
 
 		# default amount disallowed?
 		if read_config(wallet, "autopay_disallow_default", c["default_autopay_disallow_default"]) \
